# rnb-planning

./: .gitignore  Doxyfile  INSTALL_TF_2_4.md  README_GRPC.md  ReadMe.md  SUPPLEMENT_README.md  TMKit_README.ipynb  Untitled.ipynb  collision.ipynb  dev_log.md  graph-co.ipynb  graph-co_bak.ipynb  graph-combined.ipynb  graph.ipynb  graph_test.py  rebuild_etasl.sh  s1.csv  s1face.csv  s2.csv  s2face.csv  test.ipynb  test_graph.py  test_transfer_time.ipynb  tmp.pkl  vtx1_all.npy  vtx2_all.npy
.gitignore/: .gitignore  Untitled.ipynb  rotation_utils.py  test.ipynb
HPP/: Untitled.ipynb
IndyFramework2.0/: ExternalInterpolator.h
IndyFramework3.0/: INSATLL.md  INSATLL_GRPC.md  ReadMe.md  fix_stdlibc++.sh
MATLAB/: .gitignore  GJK.m  MAIN_example.m  print_mat.m
TestCvx/: TF Single Equality Constrained Quadratic Optimizing.ipynb  prof-plots.ipynb  test.ipynb
docs/: Detection.md  ENVIRONMENT.md  ETASL_SETUP.md  HARDWARE_SETUP.md  HOW_TO.md  PDDLStream.md  ROS_SETUP.md  SUPPLEMENT_README.md  TENSORFLOW_BUILD.md  TENSORFLOW_SETUP.md  TF-TRT compatibility matrix.xlsx  TF_REF.md  dev_log.md  management_policy.md
doxygen/: Doxyfile  host_doxygen.py
eTaSL/: CheckData.ipynb  CheckData.py  CollectData.ipynb  CollectData.py  ConvertData.ipynb  ConvertData.py  Data_1_Collect.ipynb  Data_1_Collect.py  Data_2_Check.ipynb  Data_2_Check.py  Data_2_Check_SS_RS.ipynb  Data_2_Check_SS_RS.py  Data_3_Convert.ipynb  Data_3_Convert.py  Data_4_Verify.ipynb  RVIZ_SHOW_MARKER.ipynb  ReadMe.md  Test2Robot.ipynb  TestKinect.ipynb  Test_GradCam.ipynb  Test_Indy.ipynb  Test_Network_Structured_LV1.ipynb  config.pkl  (+46 more)
eTaSL/moveit_plan_compact/: .gitignore  CMakeLists.txt  build.sh
eTaSL/moveit_plan_compact/include/: constants.h  library.h  logger.h  moveit_compact.h  ompl_custom_constraint.h  ompl_planner_manager_custom.h  ros_load_yaml.h  typedef.h
eTaSL/moveit_plan_compact/include/ompl_interface/: OMPLDynamicReconfigureConfig.h  model_based_planning_context.h  ompl_custom_constraint.h  ompl_interface.h  ompl_planner_manager_custom.h  planning_context_manager.h
eTaSL/moveit_plan_compact/include/ompl_interface/detail/: constraints_library.h  state_validity_checker.h
eTaSL/moveit_plan_compact/include/ompl_interface/parameterization/: model_based_state_space.h
eTaSL/moveit_plan_compact/src/: boost_python_interface.cpp  library.cpp  moveit_compact.cpp  test_mpc.cpp  typedef.cpp
eTaSL/moveit_plan_compact/src/ompl_interface/: model_based_planning_context.cpp  ompl_interface.cpp  planning_context_manager.cpp
eTaSL/moveit_plan_compact/src/ompl_interface/detail/: constrained_goal_sampler.cpp  constrained_valid_state_sampler.cpp  goal_union.cpp  projection_evaluators.cpp  state_validity_checker.cpp
eTaSL/moveit_plan_compact/src/ompl_interface/parameterization/: model_based_state_space.cpp
eTaSL/moveit_plan_compact/src/ompl_interface/parameterization/joint_space/: joint_model_state_space_factory.cpp
eTaSL/moveit_plan_compact/src/ompl_interface/parameterization/work_space/: pose_model_state_space.cpp
eTaSL/moveit_plan_compact/test_assets/: custom_robots.srdf  custom_robots.urdf  planning_plugin.yaml
eTaSL/moveit_plan_compact/test_py_ctypes/: test_planner.py
eTaSL/openGJK/lib/: CMakeLists.txt  openGJKlib.cbp
eTaSL/openGJK/lib/include/: openGJK_cpp_wrap.h
eTaSL/openGJK/lib/include/openGJK/: openGJK.h
eTaSL/openGJK/lib/src/: boost_python_interface.cpp  openGJK.c  openGJK.cpp  openGJK_cpp_wrap.cpp
lib/latticizer/: .gitignore  CMakeLists.txt  latticizer-test  latticizer.cbp
lib/latticizer/include/: latticizer.h  logger.h  timer.h
lib/latticizer/src/: boost_python_interface.cpp  latticizer.cpp  logger.cpp  test.cpp
lib/moveit_interface_py/: .gitignore  CMakeLists.txt  DeveloperNote.md  Doxyfile  build.sh
lib/moveit_interface_py/include/: moveit_compact.h  planning_objective.h  ros_load_yaml.h  typedef.h
lib/moveit_interface_py/include/ompl_interface/: model_based_planning_context.h  ompl_custom_constraint.h  ompl_interface.h  ompl_planner_manager_custom.h  planning_context_manager.h  planning_objective.h
lib/moveit_interface_py/include/ompl_interface/detail/: projection_evaluators.h
lib/moveit_interface_py/include/ompl_interface/parameterization/: model_based_state_space.h  model_based_state_space_factory.h
lib/moveit_interface_py/include/ompl_interface/parameterization/joint_space/: joint_model_state_space.h  joint_model_state_space_factory.h
lib/moveit_interface_py/include/ompl_interface/parameterization/work_space/: pose_model_state_space.h
lib/moveit_interface_py/include/ompl_interface/planner/: KPIECE_CUSTOM.h
lib/moveit_interface_py/src/: boost_python_interface.cpp  moveit_compact.cpp  test_mpc.cpp  typedef.cpp
lib/moveit_interface_py/src/ompl_interface/: model_based_planning_context.cpp  ompl_interface.cpp  planning_context_manager.cpp
lib/moveit_interface_py/src/ompl_interface/detail/: constrained_goal_sampler.cpp  constraints_library.cpp  threadsafe_state_storage.cpp
lib/moveit_interface_py/src/ompl_interface/parameterization/: model_based_state_space.cpp
lib/moveit_interface_py/src/ompl_interface/parameterization/work_space/: pose_model_state_space_factory.cpp
lib/moveit_interface_py/src/ompl_interface/planner/: KPIECE_CUSTOM.cpp
lib/moveit_interface_py/test_assets/: chomp_planning.yaml  custom_robots.srdf  custom_robots.urdf  kinematics.yaml  ompl_planning.yaml  planning_plugin.yaml  stomp_planning.yaml
lib/moveit_interface_py/test_py_ctypes/: gtimer.py
moveit_plan_compact/: .gitignore  CMakeLists.txt
moveit_plan_compact/include/: library.h
moveit_plan_compact/src/: library.cpp
moveit_plan_compact/test_assets/: custom_robots.srdf
moveit_plan_compact/test_py_ctypes/: gtimer.py  test_hello_time.ipynb  test_planner.ipynb  test_planner.py
src/scripts/milestone_202110/boost_reconstruction/: CMakeLists.txt
src/scripts/milestone_202110/boost_reconstruction/reconstruction_interface/: boost_python_interface.cpp  bp_container_interface.h  reconstruction_interface.cpp  reconstruction_interface.h  reconstruction_interface_py-test  test_main.cpp
(+2418 files in other folders)
